[gd_scene load_steps=2 format=2]

[ext_resource path="res://Camera.gd" type="Script" id=1]

[node name="Camera2D" type="Camera2D"]
position = Vector2( 408, -8 )
current = true
limit_bottom = 700
script = ExtResource( 1 )

[node name="ScreenshakeTimer" type="Timer" parent="."]
one_shot = true

[node name="ZoomTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="ScreenshakeTimer" to="." method="_on_ScreenshakeTimer_timeout"]
[connection signal="timeout" from="ZoomTimer" to="." method="_on_ZoomTimer_timeout"]
